Bug 544359 - Replying to an attached message（message/rfc822 part) or an opened .eml file shows incorrect date; r=bienvenu, r=mnyromyr